# blokus

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TESTING.md
resources/: shapes.txt
src/: board.c  board.h  color.h  config.c  config.h  game.c  game.h  list_utils.c  list_utils.h  main.c  player.c  player.h  point.c  point.h  shape.c  shape.h
